always show the scrollbar to avoid layout shifts

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,10 @@
 }
 
 @layer base {
+  body {
+    overflow-y: scroll;
+  }
+
   body .dark {
     background-color: var(--color-neutral);
     color: var(--color-default);
